# altmin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  readme.md  setup.py  todo.txt
adept-2.1.1/: Makefile  Makefile.in  config.h  config.status  config_platform_independent.h  configure  libtool
adept-2.1.1/adept/: Makefile  Makefile.in  libadept.la  libadept_la-Minimizer.lo  libadept_la-line_search.lo  libadept_la-minimize_conjugate_gradient.lo  libadept_la-minimize_levenberg_marquardt.lo  libadept_la-minimize_limited_memory_bfgs.lo
adept-2.1.1/adept/.deps/: libadept_la-Array.Plo  libadept_la-Minimizer.Plo  libadept_la-Stack.Plo  libadept_la-StackStorageOrig.Plo  libadept_la-Storage.Plo  libadept_la-cppblas.Plo  libadept_la-index.Plo  libadept_la-inv.Plo  libadept_la-jacobian.Plo  libadept_la-line_search.Plo  libadept_la-minimize_conjugate_gradient.Plo  libadept_la-minimize_levenberg_marquardt.Plo  libadept_la-minimize_limited_memory_bfgs.Plo  libadept_la-settings.Plo  libadept_la-solve.Plo  libadept_la-vector_utilities.Plo
adept-2.1.1/adept/.libs/: libadept.lai
adept-2.1.1/benchmark/: Makefile  Makefile.in  animate  autodiff_benchmark  matrix_benchmark
adept-2.1.1/benchmark/.deps/: animate-animate.Po  autodiff_benchmark-autodiff_benchmark.Po  matrix_benchmark-matrix_benchmark.Po
adept-2.1.1/include/: Makefile
adept-2.1.1/test/: fortran_function.cpp  test_adept  test_adept_with_and_without_ad  test_array_speed  test_checkpoint  test_constructors  test_fortran_from_adept.cpp  test_misc  test_no_lib  test_radiances  test_radiances_array  test_thread_safe
include/: cnn.h  cnn_layers.h  defines.h  fast_altmin.hpp  functions.hpp  layers.h  nanobind.hpp  nanobind_criterion.hpp  nanobind_derivatives.hpp  nanobind_layers.hpp  neural_network.h  types.h  variant.h  variant_layers.h  variant_nn.h
src/: basic_altmin.py  control_flow.py  dataset.py  eigen.cpp  experiment.py  fast_altmin.cpp  functions.cpp  helper_methods.py  lin.py  manual_altmin.py  models.py  nanobind.cpp  nanobind_criterion.cpp  nanobind_derivatives.cpp  nanobind_get_codes.cpp  nanobind_hello_world.cpp  nanobind_hello_world.py  nanobind_hello_world_in.cpp  nanobind_hello_world_out.cpp  nanobind_layers.cpp  nanobind_layers.hpp  nanobind_lin.cpp  nanobind_matrix_funcs.cpp  nanobind_matrix_in.cpp  nanobind_matrix_multiplication.cpp  nanobind_pass_dict.cpp  nanobind_relu.cpp  nanobind_return_matrix.cpp  nanobind_sigmoid.cpp  run_altmin_sgd.py  train_model.py
src/altmin/: __init__.py
src/fast_altmin/: __init__.py  control_flow.py
src/fast_altmin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nanobind_hello_world/: __init__.py
test/: CMakeLists.txt
tests/: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Makefile  autodiff_performance.cpp  benchmarks.py  cmake_install.cmake  derivatives.py  eigen-performance.cpp  linear_time_comparison.py  log_approximator.py  matrix_mul.py  setup.py  sin_aproximator.py  test_all.py  test_altmin_functions.py  test_autograd.py  test_derivatives.py  test_eigen.py  test_helper_methods.py  test_layers.py  test_losses.py  test_subclass.py  test_times.py  tests.cpp  tests.py  tests_class.py
tests/CPM_modules/: FindCatch2.cmake
